force-app/main/default/objects/Review__c/fields/Comments_per_Program_Topics__c.field-meta.xml
<CustomField>
    <fullName>Comments_per_Program_Topics__c</fullName>
    <label>Comments per Program Topics</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>