force-app/main/default/objects/Review__c/fields/Program_Topics__c.field-meta.xml
<CustomField>
    <fullName>Program_Topics__c</fullName>
    <label>Program Topics</label>
    <type>TextArea</type>
</CustomField>