force-app/main/default/objects/Review__c/fields/World_Wide_ERC_Regional_Event_Plans__c.field-meta.xml
<CustomField>
    <fullName>World_Wide_ERC_Regional_Event_Plans__c</fullName>
    <label>World Wide ERC / Regional Event Plans</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>